--- a/example-configuration.yaml
+++ b/example-configuration.yaml
@@ -1,7 +1,9 @@
 ---
+app_name: ExampleApp
 
-root: /home/user42/sounds/ 
+root: /home/user42/sounds
 data: /home/user42/sounds/.catalog
 logging: /home/user42/sounds/.catalog/logs
+log_level: debug
 covers: /home/user42/sounds/.catalog/covers
 intake: /home/user42/sounds/.sort
